    manually.
    - drop mv-qt4-bin-dbg.sh script.
    - drop elfutils build dependency.
  * Bump debhelper build-dependency to 9.
  * Fix hyphen-used-as-minus-sign lintian warnings.
  * Drop the libqt4-phonon package and build with -no-phonon.
    It's not needed anymore as QtWebKit is built from an own source package and
    no longer uses phonon anyway.

  [ Didier Raboud ]
  * Merge the 4:4.7.4-3 unstable release: drop fix-format.diff, merged
    upstream.

  [ Pino Toscano ]
  * Fix atomic support on sparc64, by Aurelien Jarno (thanks!);
    patch qt_atomic_sparc64.patch. (Closes: #647265)

 -- Fathi Boudra <fabo@debian.org>  Wed, 04 Jan 2012 22:15:56 +0200

qt4-x11 (4:4.8.0-1) experimental; urgency=low

  * New upstream release.

  [ Fathi Boudra ]
  * Drop patches (stolen upstream):
    - Fix_builds_with_compilers_without_--with-fpu_neon_as_default.patch
    - Update_createwindow_in_qgl_x11egl.patch
    - Improve-performance-of-partial-updates-in-raster-win.patch
    - Fix_transformIsSimple_in_QGraphicsScene.patch
    - Micro-optimization_for_QSpanData.patch
    - Some_Optimizations_for_the_gray_raster.patch
    - Make_use_of_the_fast_image_paths.patch
    - Fixed_bug_in_X11_backend_when_creating_translucent_windows.patch
    - Take_Xft.hintstyle_by_default_to_match_the_behavior_of_GTK+.patch
    - Fix_fontconfig_usage_in_X11_font_database.patch
    - Bug-fix-Allow-QTDIR-to-contain-regex-metacharacters.patch
    - armv6_Include_explicitly_IT_instructions.patch
    - armv6_Add_support_for_ARMv7_atomic_operations.patch
    - s390x_jscore.diff
    - blacklist-diginotar-cert.diff
    - Remove_QtHelp_dependency_on_QtXml.patch
  * Drop openssl_no_ssl2.patch - fixed upstream.
  * Add patches:
    - qt-multiarch-plugin-path-compat.diff - include legacy pre-multiarch
      plugin path.
    - fix_ftbfs_format-security.patch - due to debian/compat bump to 9, Qt is
      built with -Werror=format-security and trigger an error: format not a